Почистил проект от дубликатов